
Fri 19th Jul 2024, 13:48:49
Fully tested EL_TEXT_EDITION_HISTORY for better undo/redo

Sun 21st Jul 2024, 15:09:12
New class EL_TABLE_INTERVAL_MAP_LIST

Tue 23rd Jul 2024, 15:45:49
EL_REFLECTIVE_STRING_TABLE is new and EL_CASE.Sentence is new

Thu 25th Jul 2024, 19:38:19
Completion of EL_TRANSLATION_TABLE for Pyxis and XML

Sat 3rd Aug 2024, 16:04:46
Implemented EL_SUBSTRING using UTF-8 encoded SPECIAL array

Tue 20th Aug 2024, 18:30:06
Revised base clusters with new string_8 and string_32

Thu 22nd Aug 2024, 13:37:33
Implemented EL_SHARED_SYSTEM_ERROR_TABLE as compressed by zlib

Mon 26th Aug 2024, 18:12:06
Improved EL_BATCH_AUTOTEST; reorganized testing for fast-cgi

Sun 8th Sep 2024, 16:16:52
Set compatibility mode in registry; Test set for Tuple.fill_immutable

Sun 22nd Sep 2024, 17:33:09
Major refactor of EL_HASH_TABLE, with optimized list conversion

Sat 5th Oct 2024, 18:49:10
Optimized EL_CONTAINER_STRUCTURE and EL_HASH_TABLE with item_area

Sun 6th Oct 2024, 9:01:11
Testing preparation/command

Sun 6th Oct 2024, 9:09:24
Added ability to have more than one preparation command in Duplicty backups

Tue 22nd Oct 2024, 15:34:18
Improvements to http client resource exists routine

Sat 2nd Nov 2024, 18:12:25
New class EL_RESOURCE_URL

Sat 9th Nov 2024, 10:45:25
EL_TITLED_WINDOW no longer inherits EL_MODULE_LOG

Mon 11th Nov 2024, 10:07:48
New routine EL_WIDGET_ROUTINES.replace_list

Sat 16th Nov 2024, 10:49:18
Fix currency_exchange_history

Wed 22nd Jan 2025, 10:12:28
Traffic analysis fixes

Thu 30th Jan 2025, 10:26:54
Three 404 web log reports

Mon 10th Feb 2025, 18:40:05
New routines for EL_PLAIN_TEXT_FILE new_line_list: EL_ZSTRING_LIST

Fri 14th Feb 2025, 18:18:00
Implementing new EL_404_INTERCEPT_SERVLET using run_service_update_firewall.sh

Sat 15th Feb 2025, 17:32:32
Dynamically modified /lib/ufw/user.rules with hacker intercept servlet

Thu 20th Feb 2025, 19:02:50
Optimizing traffic analysis and 404 intercept URI matching
